.helm/templates/docker-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: dockerhost
  namespace: nexus
subsets:
  - addresses:
      - ip: 172.17.0.1 # this is the gateway IP in the "bridge" docker network
    ports:
      - port: 9042
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dockerhost
  namespace: nexus
spec:
  clusterIP: None
  ports:
    - port: 9042
      targetPort: 9042
      protocol: TCP
