.helm/templates/receiver-lb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nexus-receiver-lb
  namespace: nexus
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: nexus-receiver
  ports:
    - port: 8080
      targetPort: 8080
