.helm/templates/scheduler-lb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nexus-lb
  namespace: nexus
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: scheduler
  ports:
    - port: 8888
      targetPort: 8080
